--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@google/model-viewer": "^4.1.0",
     "@radix-ui/react-tooltip": "^1.2.7",
     "@tanstack/react-query": "^5.82.0",
+    "@tanstack/react-query-devtools": "^5.82.0",
     "@vapor-ui/core": "^0.3.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
