--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "@radix-ui/react-tooltip": "^1.2.7",
     "@tanstack/react-query": "^5.82.0",
     "@tanstack/react-query-devtools": "^5.82.0",
-    "@vapor-ui/core": "^0.3.0",
+    "@vapor-ui/core": "^0.3.1",
+    "@vapor-ui/icons": "^0.1.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "lucide-react": "^0.525.0",
