feat: 미션 디테일 바텀시트 기능 추가

--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "scripts": {
     "dev": "next dev --turbopack --hostname 0.0.0.0",
+    "dev-ssl": "node server.js",
     "build": "next build",
     "start": "next start",
     "lint": "next lint"
