--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@google/model-viewer": "^4.1.0",
     "@radix-ui/react-slot": "^1.2.3",
     "@radix-ui/react-tooltip": "^1.2.7",
+    "@radix-ui/react-visually-hidden": "^1.2.3",
     "@tanstack/react-query": "^5.82.0",
     "@tanstack/react-query-devtools": "^5.82.0",
     "@vapor-ui/core": "^0.3.1",
