--- a/k8s/ingress.yaml
+++ b/k8s/ingress.yaml
@@ -17,7 +17,7 @@ spec:
             name: next-frontend
             port:
               number: 3000
-  tls: # 이미 사용 중인 TLS 섹션 그대로 둡니다
+  tls:
   - hosts:
       - team6.goorm.training
     secretName: team6-tls
