--- a/k8s/frontend.yaml
+++ b/k8s/frontend.yaml
@@ -1,7 +1,7 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: react-frontend
+  name: next-frontend
 spec:
   replicas: 1
   selector:
@@ -14,7 +14,7 @@ spec:
     spec:
       containers:
       - name: frontend
-        image: 837126493345.dkr.ecr.ap-northeast-2.amazonaws.com/team6/frontend:latest
+        image: 837126493345.dkr.ecr.ap-northeast-2.amazonaws.com/team6/frontend:20
         ports:
         - containerPort: 3000
         volumeMounts:
